--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "bootstrap": "^4.6.1",
         "chart.js": "2.9.3",
         "core-js": "3.6.5",
+        "firebase": "^8.10.0",
         "ng2-charts": "2.3.0",
         "ngx-toastr": "^12.0.0",
         "rxjs": "6.5.5",
