--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "ngx-bootstrap": "^6.2.0",
     "ngx-intl-tel-input": "^2.6.0",
     "ngx-toastr": "^12.0.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.3.0",
     "rxjs": "6.5.5",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.3"
