--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "firebase": "^8.10.0",
     "google-libphonenumber": "^3.2.27",
     "intl-tel-input": "^17.0.3",
-    "mat-tree-select-input": "^1.1.7",
+    "mat-tree-select-input": "^1.1.6",
     "ng-multiselect-dropdown": "^0.3.8",
     "ng2-charts": "2.3.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-intl-tel-input": "^2.6.0",
     "ngx-toastr": "^12.0.0",
+    "ngx-tree-select": "^0.15.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.0",
     "rxjs": "6.5.5",
