--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "primeicons": "^5.0.0",
     "primeng": "^13.3.0",
     "rxjs": "6.5.5",
+    "uuid": "^8.3.2",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.3"
   },
